load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/uhthomas/rules_helm
gazelle(name = "gazelle")

load("//helm:defs", "helm_template")

helm_template(
    name = "helm_template_test",
    chart = "@io_github_kubernetes_ingress_nginx_ingress_nginx//:chart",
    values = ["values.yaml"],
)
